sumo/tests/sumo/errors/network/node_count/root__node_count__not_numeric/errors.sumo
Error: The number of nodes is not numeric.
Quitting (on error).
